--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,23 @@ services:
       volumes:
         - /app/node_modules
         - .:/app
+
+version: '3'
+services:
+    web:
+      build:
+        context: .
+        dockerfile: Dockerfile.test
+      ports:
+        - "3000:3000"
+      volumes:
+        - /app/node_modules
+        - .:/app
+    test:
+      build:
+        context: .
+        dockerfile: Dockerfile.test
+      volumes:
+          - /app/node_modules
+          - .:/app
+      command: ["npm", "run", "test"]
